# flatland-asp

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
asp/encodings/: passing_siding_naive_encoding.lp  straight_line_naive_encoding.lp
data/encodings/: graph.lp  straight_line_naive_encoding.lp  vertex.lp
data/environments/: 2x3x1-simple_switch.json  2x3x1-simple_switch.pkl  2x3x2-switch_dead_end_passing.json  2x3x2-switch_dead_end_passing.pkl  3x10x1-four_cycle.json  3x10x1-four_cycle.pkl  3x10x2-four_cycle.json  3x10x2-four_cycle.pkl  3x10x3-four_cycle.json  3x10x3-four_cycle.pkl  3x10x4-four_cycle.json  3x10x4-four_cycle.pkl  3x4x1-single_cycle.json  3x4x1-single_cycle.pkl  3x4x2-single_cycle.json  3x4x2-single_cycle.pkl  3x4x3-single_cycle.json  3x4x3-single_cycle.pkl  3x4x4-single_cycle.json  3x4x4-single_cycle.pkl  3x5x2-simple_order.json  3x5x2-simple_order.pkl  4x3x1-no_exit.json  4x3x1-no_exit.pkl  5x5x2-crossing.json  5x5x2-crossing.pkl  7x15x2-wait_or_late.json  7x15x2-wait_or_late.pkl  multi_passing_siding_map.json  multi_passing_siding_map.pkl  passing_siding_map.json  passing_siding_map.pkl  simple_switch_map.json  simple_switch_map.pkl
data/instances/: naive_test_instance.lp
data/solutions/: simple_switch_map_action_encoding.json  solve.json  wait_or_long_action_encoding.json
examples/: clingo_python_example.py  clingo_python_example_instance.lp  naive_test_instance.lp  static_flatland_map_example.py
src/flatlandasp/: __init__.py  flatland_asp.py  flatland_asp_config.py  main.py
templates/: test.html
(+45 files in other folders)
