[project]
name = "flatlandasp"
version = "0.1"
dependencies = [
    "flatland-rl", 
    "pydantic", 
    "clingo", 
    "fastapi", 
    "uvicorn"
]

[project.scripts]
flasp = "flatlandasp.main:main"

[tool.ruff]
extend-select = ["C4","SIM","TCH", "I", "N", "B", "BLE", "ERA", "ICN", "RET", "RSE", "RUF", "S", "T20", "TID"]
ignore = ["S101", "B008", "B905", "F541"]
show-fixes = true
target-version = "py310"
